# task-managing-system

./: .gitignore  README.md  host_gui.py  tempCodeRunnerFile.py
.metadata/: version.ini
.metadata/.plugins/jp.go.aist.rtm.rtcbuilder/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 3.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/read_SQL/.indexes/: history.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.help.ui/scope_sets/: Default.pref  language.hist
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2022/10/44/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/read_SQL/2022/10/44/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
branch/: .appveyor.yml  .project  CMakeLists.txt  README.md  RTC.xml  RTC.xml20221023173757  branch.conf  branch.py  rtc.conf
branch/cmake/: branch-config.cmake.in  cpack_options.cmake.in
branch/doc/: conf.py.in  doxyfile.in
branch/scripts/ubuntu_1604/: Dockerfile
branch/scripts/ubuntu_1804/: Dockerfile
branch/test/: CMakeLists.txt  branchTest.py
display/: .appveyor.yml  .project  CMakeLists.txt  README.md  RTC.xml  TaskListSeq_idl.py  TaskList_idl.py  delete.bat  display.conf  display.py  idlcompile.bat  idlcompile.sh  postinst.in  rtc.conf
display/_GlobalIDL/: __init__.py
display/_GlobalIDL__POA/: __init__.py
display/cmake/: cpack_options.cmake.in  display-config.cmake.in  wix_patch.xml.in
display/doc/: conf.py.in
display/idl/: CMakeLists.txt  TaskList.idl  TaskListSeq.idl
display/scripts/ubuntu_1604/: Dockerfile
display/scripts/ubuntu_1804/: Dockerfile
display/test/: CMakeLists.txt  displayTest.py
id2signal/: .appveyor.yml  .project  CMakeLists.txt  README.md  RTC.xml  RTC.xml20221023204333  RTC.xml20221031222815  RTC.xml20221031223502  id2signal.conf  id2signal.py  id2signal.py20221031223501  rtc.conf
id2signal/cmake/: id2signal-config.cmake.in
id2signal/doc/: conf.py.in
id2signal/scripts/ubuntu_1604/: Dockerfile
id2signal/scripts/ubuntu_1804/: Dockerfile
id2signal/test/: CMakeLists.txt  id2signalTest.py
id2signal/text/: CMakeLists.txt  id2signalTest.py
read_SQL/: .appveyor.yml  .project  CMakeLists.txt  README.md  RTC.xml  TaskListSeq_idl.py  idlcompile.bat  idlcompile.sh  read_SQL.conf  read_SQL.py  rtc.conf
read_SQL/_GlobalIDL/: __init__.py
read_SQL/_GlobalIDL__POA/: __init__.py
read_SQL/cmake/: read_sql-config.cmake.in  wix_patch.xml.in
read_SQL/doc/: conf.py.in
read_SQL/idl/: CMakeLists.txt
read_SQL/scripts/ubuntu_1604/: Dockerfile
read_SQL/scripts/ubuntu_1804/: Dockerfile
read_SQL/test/: CMakeLists.txt  read_SQLTest.py
serial_for_arduino/: .project  CMakeLists.txt  README.md  RTC.xml  serial_for_arduino.conf  serial_for_arduino.py
serial_for_arduino/cmake/: serial_for_arduino-config.cmake.in
serial_for_arduino/doc/: doxyfile.in
serial_for_arduino/idl/: CMakeLists.txt
serial_for_arduino/scripts/ubuntu_1604/: Dockerfile
serial_for_arduino/scripts/ubuntu_1804/: Dockerfile
serial_for_arduino/test/: CMakeLists.txt  serial_for_arduinoTest.py
serical_for_arduino/: .appveyor.yml  .project  CMakeLists.txt  README.md  README.md20221031000644  RTC.xml  RTC.xml20221030235910  RTC.xml20221031000656  rtc.conf  serial_for_arduino.conf  serial_for_arduino.py  serial_for_arduino.py20221031001538
serical_for_arduino/cmake/: cpack_options.cmake.in
serical_for_arduino/doc/: conf.py.in
serical_for_arduino/test/: CMakeLists.txt20221031000642  serial_for_arduinoTest.py  serial_for_arduinoTest.py20221031000654
write_SQL/: .appveyor.yml  .project  CMakeLists.txt  README.md  RTC.xml  TaskList_idl.py  idlcompile.bat  idlcompile.sh  prerm.in  rtc.conf  write_SQL.conf  write_SQL.py
write_SQL/_GlobalIDL/: __init__.py
write_SQL/_GlobalIDL__POA/: __init__.py
write_SQL/cmake/: wix_patch.xml.in  write_sql-config.cmake.in
write_SQL/doc/: conf.py.in
write_SQL/idl/: CMakeLists.txt
write_SQL/scripts/ubuntu_1604/: Dockerfile
write_SQL/scripts/ubuntu_1804/: Dockerfile
write_SQL/test/: CMakeLists.txt  write_SQLTest.py
